# OpenLabeling

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
main/: class_list.txt  launcher.py  main.py
object_detection/: tf_object_detection.py
open_labeling/: common.py  dasiamrpn.py  edit_image.py  launcher.py  load_classes.py  main_auto.py  run_app.py
tests/: test_load_classes.py  test_run.py
