[tool.poetry]
name = "open-labeling"
version = "0.2.16"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "open_labeling" },
]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = [
    { version = "^1.16.0", platform = 'win32' },
    { version = "^1.21.0", platform = 'linux' },
]
opencv-contrib-python = [
    { version = "==3.4.9.33", platform = 'win32' },
    { version = "^3.4.9.33", platform = 'linux' },
]
tqdm = "^4.29"
PySimpleGUI = "^4.55.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
label_folder = "open_labeling.launcher:label_folder"
label_image = "open_labeling.edit_image:run"
