[tool.poetry]
name = "open-labeling"
version = "0.3.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "open_labeling" },
]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10"
numpy = [
    { version = "^2.0.0", platform = 'win32' },
    { version = "^2.0.0", platform = 'linux' },
]
opencv-contrib-python = [
    { version = "^4.10.0.84", platform = 'win32' },
    { version = "^4.4.9.33", platform = 'linux' },
]
tqdm = "^4.29"
pyperclip = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
label_folder = "open_labeling.launcher:label_folder"
label_image = "open_labeling.edit_image:run"
